<resources>
    <string name="app_name">app</string>
    <string name="movie_img">img movie</string>
    <string name="movie_name">Avengers:\nEnd Game</string>
    <string name="pg">13+</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="review">125 Reviews</string>
    <string name="storyline_title">Storyline</string>
    <string name="storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast_title">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="back">Back</string>
    <string name="movies_list">Movies list</string>
    <string name="name_movie_card">Avengers: End Game</string>
    <string name="duration_movie">137 min</string>
</resources>