<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="395dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/space_4x" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:contentDescription="@string/movie_img"
            android:scaleType="centerCrop"
            android:src="@drawable/img_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_marginTop="59dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintStart_toEndOf="@+id/gl_guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:text="@string/back"
            android:textColor="@color/back_text_color"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/path"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:cardBackgroundColor="@color/background"
            app:layout_constraintBottom_toTopOf="@id/tv_movie_name"
            app:layout_constraintStart_toEndOf="@+id/gl_guideline_start">

            <TextView
                android:id="@+id/tv_pg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pg"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="254dp"
            android:gravity="center_vertical"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="-7sp"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="12"
            android:text="@string/movie_name"
            android:textColor="@color/movie_name_color"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/gl_guideline_end"
            app:layout_constraintStart_toEndOf="@+id/gl_guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textColor="@color/genre_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/gl_guideline_end"
            app:layout_constraintStart_toEndOf="@+id/gl_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_name" />

        <ImageView
            android:id="@+id/iv_star_1"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_marginTop="@dimen/space_1x"
            android:src="@drawable/ic_star_pink_icon"
            app:layout_constraintStart_toEndOf="@+id/gl_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <ImageView
            android:id="@+id/iv_star_2"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_marginStart="@dimen/star_margin_start"
            android:layout_marginTop="@dimen/space_1x"
            android:src="@drawable/ic_star_pink_icon"
            app:layout_constraintStart_toEndOf="@+id/iv_star_1"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <ImageView
            android:id="@+id/iv_star_3"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_marginStart="@dimen/star_margin_start"
            android:layout_marginTop="@dimen/space_1x"
            android:src="@drawable/ic_star_pink_icon"
            app:layout_constraintStart_toEndOf="@+id/iv_star_2"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <ImageView
            android:id="@+id/iv_star_4"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_marginStart="@dimen/star_margin_start"
            android:layout_marginTop="@dimen/space_1x"
            android:src="@drawable/ic_star_pink_icon"
            app:layout_constraintStart_toEndOf="@+id/iv_star_3"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <ImageView
            android:id="@+id/iv_star_5"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_marginStart="@dimen/star_margin_start"
            android:layout_marginTop="@dimen/space_1x"
            android:src="@drawable/ic_star_gray_icon"
            app:layout_constraintStart_toEndOf="@+id/iv_star_4"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:text="@string/review"
            android:textColor="@color/review_text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_star_5"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="iv_star_5, tv_review" />

        <TextView
            android:id="@+id/tv_storyline_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/storyline_title"
            android:textColor="#ECECEC"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/gl_guideline_end"
            app:layout_constraintStart_toEndOf="@+id/gl_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/barrier_review" />

        <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:paddingTop="24dp"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/gl_guideline_end"
            app:layout_constraintStart_toEndOf="@+id/gl_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_storyline_title" />

        <TextView
            android:id="@+id/tv_cast_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:letterSpacing="-0.01"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="0"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/cast_title"
            android:textColor="@color/cast_text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/gl_guideline_end"
            app:layout_constraintStart_toEndOf="@+id/gl_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_storyline" />

        <ImageView
            android:id="@+id/iv_cast_1"
            style="@style/cast"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/robert_downey"
            app:layout_constraintEnd_toStartOf="@+id/iv_cast_2"
            app:layout_constraintStart_toEndOf="@+id/gl_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_title" />

        <TextView
            android:id="@+id/tv_cast_1"
            style="@style/cast_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/robert_downey_jr"
            app:layout_constraintEnd_toEndOf="@id/iv_cast_1"
            app:layout_constraintStart_toStartOf="@id/iv_cast_1"
            app:layout_constraintTop_toBottomOf="@id/iv_cast_1" />

        <ImageView
            android:id="@+id/iv_cast_2"
            style="@style/cast"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/chris_evans"
            app:layout_constraintEnd_toStartOf="@+id/iv_cast_3"
            app:layout_constraintStart_toEndOf="@+id/iv_cast_1"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_title" />

        <TextView
            android:id="@+id/tv_cast_2"
            style="@style/cast_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chris_evans"
            app:layout_constraintEnd_toEndOf="@id/iv_cast_2"
            app:layout_constraintStart_toStartOf="@id/iv_cast_2"
            app:layout_constraintTop_toBottomOf="@id/iv_cast_2" />

        <ImageView
            android:id="@+id/iv_cast_3"
            style="@style/cast"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/mark_ruffalo"
            app:layout_constraintEnd_toStartOf="@+id/iv_cast_4"
            app:layout_constraintStart_toEndOf="@+id/iv_cast_2"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_title" />

        <TextView
            android:id="@+id/tv_cast_3"
            style="@style/cast_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mark_ruffalo"
            app:layout_constraintEnd_toEndOf="@id/iv_cast_3"
            app:layout_constraintStart_toStartOf="@id/iv_cast_3"
            app:layout_constraintTop_toBottomOf="@id/iv_cast_3" />

        <ImageView
            android:id="@+id/iv_cast_4"
            style="@style/cast"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/chris_hemsworth"
            app:layout_constraintEnd_toStartOf="@+id/gl_guideline_end"
            app:layout_constraintStart_toEndOf="@+id/iv_cast_3"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_title" />

        <TextView
            android:id="@+id/tv_cast_4"
            style="@style/cast_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chris_hemsworth"
            app:layout_constraintEnd_toEndOf="@id/iv_cast_4"
            app:layout_constraintStart_toStartOf="@id/iv_cast_4"
            app:layout_constraintTop_toBottomOf="@id/iv_cast_4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>