<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.movieDetails.FragmentMoviesDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/pb_loading_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/progress_bar_margin_top"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/space_4x" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/space_4x" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:contentDescription="@string/movie_img"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_movie" />

        <LinearLayout
            android:id="@+id/ll_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/path"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_arrow" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/back"
                android:textColor="@color/back_text_color"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:cardBackgroundColor="@color/background"
            app:layout_constraintBottom_toTopOf="@id/tv_movie_name"
            app:layout_constraintStart_toEndOf="@+id/gl_start">

            <TextView
                android:id="@+id/tv_pg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                tools:text="@string/pg" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="254dp"
            android:fontFamily="@font/roboto_black"
            android:gravity="center_vertical"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="-7sp"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="12"
            android:textColor="@color/movie_name_color"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/movie_name" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/pink"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_name"
            tools:text="@string/genre" />

        <LinearLayout
            android:id="@+id/ll_stars"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_marginTop="@dimen/space_1x"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_genre">

            <ImageView
                android:id="@+id/iv_star_1"
                android:layout_width="0dp"
                android:layout_height="12dp"
                android:layout_weight="1"
                android:src="@drawable/ic_star"
                app:tint="@color/pink" />

            <ImageView
                android:id="@+id/iv_star_2"
                android:layout_width="0dp"
                android:layout_height="12dp"
                android:layout_marginStart="@dimen/star_margin_start"
                android:layout_weight="1"
                android:src="@drawable/ic_star"
                app:tint="@color/pink" />

            <ImageView
                android:id="@+id/iv_star_3"
                android:layout_width="0dp"
                android:layout_height="12dp"
                android:layout_marginStart="@dimen/star_margin_start"
                android:layout_weight="1"
                android:src="@drawable/ic_star"
                app:tint="@color/pink" />

            <ImageView
                android:id="@+id/iv_star_4"
                android:layout_width="0dp"
                android:layout_height="12dp"
                android:layout_marginStart="@dimen/star_margin_start"
                android:layout_weight="1"
                android:src="@drawable/ic_star"
                app:tint="@color/pink" />

            <ImageView
                android:id="@+id/iv_star_5"
                android:layout_width="0dp"
                android:layout_height="12dp"
                android:layout_marginStart="@dimen/star_margin_start"
                android:layout_weight="1"
                android:src="@drawable/ic_star"
                app:tint="@color/gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/ll_stars"
            app:layout_constraintTop_toBottomOf="@id/tv_genre"
            tools:text="@string/review" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="ll_stars, tv_review" />

        <TextView
            android:id="@+id/tv_storyline_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/storyline_title"
            android:textColor="#ECECEC"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/barrier_review" />

        <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:paddingTop="24dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_storyline_title"
            tools:text="@string/storyline" />

        <TextView
            android:id="@+id/tv_cast_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_black"
            android:letterSpacing="-0.01"
            android:shadowColor="@color/shadow_color"
            android:shadowDx="0"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/cast_title"
            android:textColor="@color/cast_text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_storyline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>