<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="296dp"
    android:layout_marginBottom="20dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/movie_card_background"
        android:padding="2dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_movie"
            android:layout_width="156dp"
            android:layout_height="246dp"
            android:outlineProvider="background"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="@drawable/image_movie_card_tint"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            tools:src="@drawable/poster" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/space_2x" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/space_2x" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/space_2x" />

        <androidx.cardview.widget.CardView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:cardBackgroundColor="@color/background"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/gl_top">

            <TextView
                android:id="@+id/tv_pg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                tools:text="@string/pg" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="14dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_like"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintTop_toBottomOf="@id/gl_top" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/pink"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@id/barrier_rating"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            tools:text="@string/genre" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="iv_star_1,tv_review" />

        <ImageView
            android:id="@+id/iv_star_1"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/image_movie"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:tint="@color/pink" />

        <ImageView
            android:id="@+id/iv_star_2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/image_movie"
            app:layout_constraintStart_toEndOf="@+id/iv_star_1"
            app:tint="@color/pink" />

        <ImageView
            android:id="@+id/iv_star_3"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/image_movie"
            app:layout_constraintStart_toEndOf="@+id/iv_star_2"
            app:tint="@color/pink" />

        <ImageView
            android:id="@+id/iv_star_4"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/image_movie"
            app:layout_constraintStart_toEndOf="@+id/iv_star_3"
            app:tint="@color/pink" />

        <ImageView
            android:id="@+id/iv_star_5"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/image_movie"
            app:layout_constraintStart_toEndOf="@+id/iv_star_4"
            app:tint="@color/gray" />

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/gray"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@id/image_movie"
            app:layout_constraintStart_toEndOf="@+id/iv_star_5"
            tools:text="@string/review" />

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:gravity="center_vertical"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="-7sp"
            android:textColor="@color/movie_name_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv_duration_movie"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            tools:text="@string/name_movie_card" />

        <TextView
            android:id="@+id/tv_duration_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_2x"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/duration_movie_text_color"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            tools:text="@string/duration_movie" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>